bin/iptables.rules
# Generated by iptables-save v1.6.2 on Sat Jun 30 16:45:59 2018
*filter
:INPUT ACCEPT [200320:361816029]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [182966:185031355]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5353 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -d 10.0.0.0/24 -i enp0s31f6 -j ACCEPT
-A FORWARD -s 10.0.0.0/24 -i ap0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sat Jun 30 16:45:59 2018
# Generated by iptables-save v1.6.2 on Sat Jun 30 16:45:59 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [18:1113]
:POSTROUTING ACCEPT [27:1653]
:DOCKER - [0:0]
:V2RAY - [0:0]
-A PREROUTING -s 10.0.0.0/24 -d 10.0.0.1/32 -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A PREROUTING -s 10.0.0.0/24 -d 10.0.0.1/32 -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 5353
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -p tcp -j V2RAY
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 ! -o ap0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A V2RAY -d 0.0.0.0/8 -j RETURN
-A V2RAY -d 10.0.0.0/8 -j RETURN
-A V2RAY -d 127.0.0.0/8 -j RETURN
-A V2RAY -d 169.254.0.0/16 -j RETURN
-A V2RAY -d 172.16.0.0/12 -j RETURN
-A V2RAY -d 192.168.0.0/16 -j RETURN
-A V2RAY -d 224.0.0.0/4 -j RETURN
-A V2RAY -d 240.0.0.0/4 -j RETURN
# nslookup
-A V2RAY -d 23.67.57.203/32 -j RETURN
-A V2RAY -d 223.119.248.17/32 -j RETURN
-A V2RAY -d 223.119.248.25/32 -j RETURN
-A V2RAY -d 104.84.150.180/32 -j RETURN
-A V2RAY -d 23.67.57.241/32 -j RETURN
-A V2RAY -d 96.7.54.40/32 -j RETURN
-A V2RAY -d 96.7.54.56/32 -j RETURN
-A V2RAY -d 104.116.243.200/32 -j RETURN
-A V2RAY -d 23.210.215.56/32 -j RETURN
# vps address
COMMIT
